--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -4,6 +4,8 @@
   height: 100vh;
   padding: 50px;
   width: 100vw;
+  color: white;
+  font-family: bree Serif;
 }
 .team-banner {
   height: 200px;
