--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -4,6 +4,7 @@
   height: 100vh;
   padding: 50px;
   width: 100vw;
+  width: 100vw;
   color: white;
   font-family: bree Serif;
 }
@@ -11,4 +12,19 @@
   height: 200px;
   width: 900px;
   text-align: center;
+}
+.load {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.fdasjllj {
+  display: flex;
+  flex-direction: row;
+}
+.green {
+  color: green;
+}
+.red {
+  color: red;
 }
